--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-body {
+
+dy {
 	    font-family: monospace;
 	        color: navy;
 		    padding: 40px;
@@ -6,3 +7,6 @@ body {
 	    .header {
 		        font-weight: 500;
 		}
+		.hidden {
+			    display: none;
+		    }
